2011-08-28  Stefano Lattarini  <stefano.lattarini@gmail.com>

	automake: cleanups after de-ansification support removal (1)
	* automake.in (lang_c_rewrite, handle_single_transform): Rename 
	variable `$nonansi_obj' to `$obj'.

2011-08-28  Stefano Lattarini  <stefano.lattarini@gmail.com>

	ansi: remove obsolete code/files for de-ANSI-fication support
	* lib/ansi2knr.1, lib/ansi2knr.c: Deleted.
	* lib/Makefile.am (dist_pkgvdata_DATA): Do not list them anymore.
	* lib/am/ansi2knr.am: Delete.
	* lib/am/Makefile.am (dist_am_DATA): Do not list it anymore.
	* lib/Automake/Variable.pm (%_am_macro_for_var): Remove entries for
	`ANSI2KNR' and `U'.
	* m4/depout.m4 (_AM_OUTPUT_DEPENDENCY_COMMANDS): Don't care anymore
	about possible definition of the `$U' variable.
	* automake.in (@common_files): Drop `ansi2knr.1' and `ansi2knr.c'.
	(struct): Remove scalar field `ansi'.
	All callers adjusted.
	(&lang_c_finish, %de_ansi_files): Remove, they're not required
	anymore.
	All callers adjusted.
	($get_object_extension_was_run): Fix typo in comment.
	(&get_object_extension): Drop code dealing with de-ansification;
	this function basically a no-op now, but is required to properly
	initialize `$get_object_extension_was_run' variable.
	(&handle_languages, &handle_compile, &lang_c_rewrite): Drop code
	dealing with de-ansification.

2011-08-28  Stefano Lattarini  <stefano.lattarini@gmail.com>

	ansi: reject attempts to use automatic de-ANSI-fication support
	* tests/protos.m4 (AM_C_PROTOTYPES): Error out whenever called.
	* lib/Automake/Options.pm (_process_option_list ): Error out
	with a proper error message when the `ansi2knr' option is used.
	Related updates to comments.
	* tests/depacl2.test: Update.
	* tests/ansi2knr-no-more.test: New test.
	* tests/Makefile.am (TESTS): Add it.
	* NEWS: Update.

2011-08-28  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: remove tests about obsolete de-ANSI-fication support
	* tests/ansi.test: Delete.
	* tests/ansi10.test: Likewise.