@@ -1,5 +1,13 @@
 2011-08-28  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	automake: cleanups after de-ansification support removal (2)
+	* automake.in ($get_object_extension_was_run): Remove, it's not
+	really needed anymore.
+	(&get_object_extension): Remove, it's a no-op now.
+	All callers adjusted.
+
+2011-08-28  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	automake: cleanups after de-ansification support removal (1)
 	* automake.in (lang_c_rewrite, handle_single_transform): Rename 
 	variable `$nonansi_obj' to `$obj'.
